# OrangePi-Zero-EmbeddedLinux

kernel/: ReadMe.txt
kernel/module-1/: Makefile  module-1.c
orangepi-zero/: .config  custom-sun8i-h2-plus-orangepi-zero.dts  users.txt
orangepi-zero/overlayfs/etc/: wpa_supplicant.conf
orangepi-zero/overlayfs/etc/network/: interfaces
orangepi-zero/overlayfs/etc/profile.d/: message.txt  welcomemsg.sh
test-code-c/testGPIO/src/: main.c
test-code-c/testI2C/src/: main.c
test-code-c/testUART/src/: main.c
test-code-c/testUsart/: CMakeLists.txt
user/user-c/GPIO/: CMakeLists.txt
user/user-c/GPIO/src/: main.c
user/user-c/I2C/: CMakeLists.txt
user/user-c/I2C/src/: main.c
user/user-c/UART/: CMakeLists.txt
user/user-c/UART/src/: main.c
